# Axyom

./: COMPILAR2.bat  Cargo.toml  README.md  demo_trabajadores.csv  reporte_evidencia.json
rules/: banca.yaml  legal.yaml  mineria.yaml
src/: api.rs  error.rs  lib.rs  main.rs  types.rs
src/canonical/: mod.rs
src/connectors/: csv.rs  excel.rs  json_api.rs  mod.rs  sql.rs
src/core/: pipeline.rs
src/evidence/: mod.rs
src/hash/: mod.rs
src/rule_engine/: mod.rs  yaml.rs
tests/: integration.rs
